// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`feature-random should chain deep sequences correctly 1`] = `"kQBZ_TJmme0ajqT8TQj0skb5loQ6JSeXy1MenEK_EhdTigtl"`;

exports[`feature-random should chain deep sequences correctly 2`] = `"kQDT3IKOS5ePtE7TxJkH3p8JnDYFtLks7ymCAafchf922wzy"`;

exports[`feature-random should chain deep sequences correctly 3`] = `"kQCSHqCUfKlsKl8k1H01yhAWIPtkTNpnhyBa58fe3oKmgEm1"`;

exports[`feature-random should chain deep sequences correctly 4`] = `
[
  {
    "$seq": 0,
    "events": [
      {
        "$type": "deploy",
      },
      {
        "$type": "received",
        "message": {
          "body": {
            "text": "Message",
            "type": "text",
          },
          "bounce": true,
          "from": "kQBbjpCWk51tkYZGsmjT-XQUL0QGlxJD4fQHGbYhdCbwQlX-",
          "to": "kQBZ_TJmme0ajqT8TQj0skb5loQ6JSeXy1MenEK_EhdTigtl",
          "type": "internal",
          "value": 10000000000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 18192n,
      },
      {
        "$type": "sent",
        "messages": [
          {
            "body": {
              "text": "Message",
              "type": "text",
            },
            "bounce": true,
            "from": "kQBZ_TJmme0ajqT8TQj0skb5loQ6JSeXy1MenEK_EhdTigtl",
            "to": "kQDT3IKOS5ePtE7TxJkH3p8JnDYFtLks7ymCAafchf922wzy",
            "type": "internal",
            "value": 9965617000n,
          },
        ],
      },
    ],
  },
]
`;

exports[`feature-random should chain deep sequences correctly 5`] = `
[
  {
    "$seq": 0,
    "events": [
      {
        "$type": "deploy",
      },
      {
        "$type": "received",
        "message": {
          "body": {
            "text": "Message",
            "type": "text",
          },
          "bounce": true,
          "from": "kQBZ_TJmme0ajqT8TQj0skb5loQ6JSeXy1MenEK_EhdTigtl",
          "to": "kQDT3IKOS5ePtE7TxJkH3p8JnDYFtLks7ymCAafchf922wzy",
          "type": "internal",
          "value": 9965617000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 17109n,
      },
      {
        "$type": "sent",
        "messages": [
          {
            "body": {
              "text": "Message",
              "type": "text",
            },
            "bounce": true,
            "from": "kQDT3IKOS5ePtE7TxJkH3p8JnDYFtLks7ymCAafchf922wzy",
            "to": "kQCSHqCUfKlsKl8k1H01yhAWIPtkTNpnhyBa58fe3oKmgEm1",
            "type": "internal",
            "value": 9937927000n,
          },
        ],
      },
    ],
  },
]
`;

exports[`feature-random should chain deep sequences correctly 6`] = `
[
  {
    "$seq": 0,
    "events": [
      {
        "$type": "deploy",
      },
      {
        "$type": "received",
        "message": {
          "body": {
            "text": "Message",
            "type": "text",
          },
          "bounce": true,
          "from": "kQDT3IKOS5ePtE7TxJkH3p8JnDYFtLks7ymCAafchf922wzy",
          "to": "kQCSHqCUfKlsKl8k1H01yhAWIPtkTNpnhyBa58fe3oKmgEm1",
          "type": "internal",
          "value": 9937927000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 17119n,
      },
      {
        "$type": "sent",
        "messages": [
          {
            "body": {
              "text": "Message2",
              "type": "text",
            },
            "bounce": true,
            "from": "kQCSHqCUfKlsKl8k1H01yhAWIPtkTNpnhyBa58fe3oKmgEm1",
            "to": "kQCSHqCUfKlsKl8k1H01yhAWIPtkTNpnhyBa58fe3oKmgEm1",
            "type": "internal",
            "value": 9910219000n,
          },
        ],
      },
    ],
  },
  {
    "$seq": 1,
    "events": [
      {
        "$type": "received",
        "message": {
          "body": {
            "text": "Message2",
            "type": "text",
          },
          "bounce": true,
          "from": "kQCSHqCUfKlsKl8k1H01yhAWIPtkTNpnhyBa58fe3oKmgEm1",
          "to": "kQCSHqCUfKlsKl8k1H01yhAWIPtkTNpnhyBa58fe3oKmgEm1",
          "type": "internal",
          "value": 9910219000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 4957n,
      },
    ],
  },
]
`;
